Mime types are now managed by the JUploadContext
git-svn-id: https://jupload.svn.sourceforge.net/svnroot/jupload/trunk@817 35eed6a1-492f-0410-aaa5-912e50059252